<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_review_title"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_review"
        android:textSize="@dimen/dimen_18_sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_4_dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_review_average_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8_dp"
        android:textSize="@dimen/dimen_18_sp"
        app:drawableStartCompat="@drawable/baseline_star_24"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="@string/rating_dummy" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_average_rating"
        tools:listitem="@layout/review_item"
        tools:itemCount="1"/>

    <TextView
        android:id="@+id/tv_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_review"
        android:layout_marginTop="@dimen/dimen_8_dp"
        app:drawableBottomCompat="@drawable/baseline_keyboard_arrow_down_24" />


</androidx.constraintlayout.widget.ConstraintLayout>