<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimen_8_dp"
    android:id="@+id/cl_box_office_item">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/dimen_175_dp"
        android:layout_height="@dimen/dimen_235_dp"
        app:cardCornerRadius="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_box_office_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@color/teal_700" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8_dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_box_office_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title_dummy"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_dummy"
                android:layout_marginEnd="@dimen/dimen_8_dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_dot"
                android:layout_marginEnd="@dimen/dimen_8_dp"/>

            <TextView
                android:id="@+id/tv_gross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gross_dummy"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>