<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24_dp"
        android:layout_marginVertical="@dimen/dimen_8_dp"
        android:elevation="@dimen/dimen_12_dp"
        app:cardCornerRadius="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8_dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4_dp">

                <TextView
                    android:id="@+id/tv_review_item_title"
                    android:layout_width="@dimen/dimen_0_dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_18_sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_item_rating"
                    tools:text="@string/review_item_title" />

                <TextView
                    android:id="@+id/tv_review_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_18_sp"
                    app:drawableStartCompat="@drawable/baseline_star_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/rating_dummy" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_spoiler_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4_dp"
                    android:layout_marginStart="@dimen/dimen_8_dp"
                    app:cardCornerRadius="@dimen/dimen_12_dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_review_item_rating"
                    app:layout_constraintStart_toEndOf="@+id/tv_review_item_rating"
                    app:layout_constraintTop_toTopOf="@+id/tv_review_item_rating">

                    <TextView
                        android:id="@+id/tv_review_item_spoiler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_4_dp"
                        android:text="@string/spoiler"
                        android:textColor="@color/red"
                        android:textSize="@dimen/dimen_12_sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_review_item_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_dummy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_item_title" />

                <TextView
                    android:id="@+id/tv_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4_dp"
                    android:text="@string/center_dot"
                    app:layout_constraintStart_toEndOf="@+id/tv_review_item_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_item_title" />

                <TextView
                    android:id="@+id/tv_review_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4_dp"
                    android:text="12 June 2023"
                    app:layout_constraintStart_toEndOf="@+id/tv_dot"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_item_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_review_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8_dp"
                android:maxLines="5"
                android:textSize="@dimen/dimen_18_sp"
                tools:text="@string/lorem" />

            <TextView
                android:id="@+id/tv_review_item_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:text="@string/see_more"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>