<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_8_dp"
    android:id="@+id/cl_coming_soon_item">

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="26 June"
        android:textSize="@dimen/dimen_20_sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8_dp"
        app:cardCornerRadius="@dimen/dimen_12_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
        android:layout_marginBottom="@dimen/dimen_8_dp">

        <LinearLayout
            android:layout_width="@dimen/dimen_175_dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_235_dp"
                tools:src="@color/teal_700"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8_dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/baseline_star_24"
                    tools:text="@string/rating_dummy"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="34dp"
                    tools:text="@string/movie_title_dummy"
                    android:maxLines="2"
                    android:ellipsize="marquee"
                    android:textSize="@dimen/dimen_16_sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_8_dp"
                        tools:text="@string/year_dummy" />

                    <TextView
                        android:id="@+id/tv_content_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_8_dp"
                        tools:text="@string/content_rating_dummy" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2h 35m" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>